--- a/public/html/assets/scss/pages/_social.scss
+++ b/public/html/assets/scss/pages/_social.scss
@@ -1,6 +1,6 @@
 .social{
     .profile-header{
-        background: transparent url('../../../assets/images/image-gallery/10.jpg') repeat scroll center center/cover;
+        background-color: #5cb65f;
         color: $white;
         padding: 20px;
         position: relative;
